# Nebenkosten-Knecht

./: .gitignore  LICENSE  QUICKSTART.md  README.md  Tech-Design-MVP.txt  index.html  run.sh  workspace.code-workspace
backend/: .env  Cargo.toml  config.toml  diesel.toml  init_db.sh  run.sh
backend/migrations/2023-05-17-000001_create_property_units/: down.sql  up.sql
backend/migrations/2023-05-17-000002_create_tenants/: down.sql  up.sql
backend/migrations/2023-05-17-000003_create_meters/: down.sql  up.sql
backend/migrations/2025-05-19-000001_create_meter_readings/: down.sql  up.sql
backend/migrations/2025-05-19-000002_create_cost_types/: down.sql  up.sql
backend/migrations/2025-05-23-223854_create_billing_periods/: down.sql  up.sql
backend/src/: api_handlers.rs  config.rs  main.rs  schema.rs
backend/src/api_handlers/: config_handlers.rs
backend/src/db/: mod.rs
backend/src/handlers/: billing.rs  cost.rs  meter.rs  meter_reading.rs  mod.rs  property_unit.rs  tenant.rs
backend/src/models/: billing.rs  cost.rs  meter.rs  meter_reading.rs  mod.rs  property_unit.rs  tenant.rs
frontend/: package-lock.json  package.json  run.sh  tailwind.config.js  vue.config.js
frontend/public/: index.html
frontend/src/: App.css  App.js  App.vue  main.js
frontend/src/assets/: tailwind.css
frontend/src/router/: index.js
specs/: Increments-MVP.txt  MILESTONE-1-COMPLETED.md  MILESTONE-2-COMPLETED.md  MILESTONE-3-COMPLETED.md  MILESTONE-4-COMPLETED.md  Notes.md  PRD-MVP.txt  deep-research.md  general.md  increment_1.md  increment_2.md  increment_4.md  index.html
(+31 files in other folders)
