[package]
name = "nebenkosten_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
anyhow = "1"
thiserror = "2"
actix-cors = "0.7"
log = "0.4"
env_logger = "0.11"

[build-dependencies]

[dev-dependencies]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true

[profile.release]
opt-level = 2
debug = false
debug-assertions = false
overflow-checks = false